--- a/frontend/container2.html
+++ b/frontend/container2.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/vue.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/vue-strap.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/echarts.min.js' %}"></script>
     <title>Quantra</title>
 </head>
 {% verbatim %}
