--- a/frontend/container2.html
+++ b/frontend/container2.html
@@ -15,7 +15,7 @@
 <body>
 <header>
     <div>
-        <a href="javascript:" onclick="app.loadView('home');">
+        <a href="javascript:" onclick="app.views.load('home');">
             <img src="res/images/logo.png">
         </a>
     </div>
@@ -62,7 +62,7 @@
             },
             methods: {
                 navClick: function (e) {
-                    app.loadView(e.target.dataset.view);
+                    app.views.load(e.target.dataset.view);
                 }
             }
         }),
@@ -83,13 +83,34 @@
             }
         }),
 
-        loadView: function (name) {
-            app.loading.show();
-            window.location.hash = name;
-            app.nav.selected = name;
-            $('#content').load('res/views/' + name + '.html?' + new Date().getTime(), function () {
-                app.loading.hide();
-            });
+        views: {
+            name: '',
+            param: {},
+            setParam: function (param, clear) {
+                if (clear) {
+                    this.param = param;
+                } else if (param) {
+                    for (var key in param) {
+                        this.param[key] = param[key];
+                    }
+                }
+                var hash = this.name;
+                if (this.param) {
+                    hash += '?' + $.param(this.param);
+                } else {
+                    this.param = {};
+                }
+                window.location.hash = hash;
+            },
+            load: function (name, param) {
+                app.loading.show();
+                this.name = name;
+                this.setParam(param, true);
+                app.nav.selected = name;
+                $('#content').load('res/views/' + name + '.html?' + new Date().getTime(), function () {
+                    app.loading.hide();
+                });
+            }
         },
 
         requests: {
@@ -129,11 +150,19 @@
         app.loading.show();
         app.dates.fetch().always(function () {
             app.loading.hide();
-            var hash = location.hash.substr(1);
-            if (hash != '') {
-                app.loadView(hash);
+            var hash = location.hash.substr(1).split('?');
+            if (hash[0] != '') {
+                var params = {};
+                if (hash.length > 1) {
+                    query = hash[1].split('&');
+                    for (var i = query.length; i > 0;) {
+                        var pair = query[--i].split('=');
+                        params[decodeURIComponent(pair[0])] = decodeURIComponent(pair[1]);
+                    }
+                }
+                app.views.load(hash[0], params);
             } else {
-                app.loadView('home');
+                app.views.load('home');
             }
         });
     });
