Update: realtime view and related

--- a/frontend/container2.html
+++ b/frontend/container2.html
@@ -34,8 +34,8 @@
                    data-view="stocklist">
                 历史行情
             </a></li>
-            <li><a href="javascript:" v-bind:class="{ act: selected == 'realtime' }" v-on:click="navClick"
-                   data-view="realtime">
+            <li><a href="javascript:" v-bind:class="{ act: selected == 'realtimelist' }" v-on:click="navClick"
+                   data-view="realtimelist">
                 实时行情 (Beta)
             </a></li>
             <li><a href="javascript:" v-bind:class="{ act: selected == 'compare' }" v-on:click="navClick"
